@@ -1,3 +1,6 @@
+15Feb17=======================================================================
+1. Update UPGRADE.mojo a bit
+2. Fix(?) problems picking up SysVar.pm variables.  
 02Jan17=======================================================================
 1. Add CTY-2615 prefixes
 2. Add rbn.pl - an experimental rbn deduplicating spot filter. 
